cluster/apps/media/shlink/web-client/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink-web-client
  namespace: media
  labels:
    app: shlink-web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shlink-web-client
  template:
    metadata:
      labels:
        app: shlink-web-client
    spec:
      containers:
        - name: shlink-web-client
          image: shlinkio/shlink-web-client:3.8.1
          ports:
            - containerPort: 80
