cluster/apps/media/shlink/web-client/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shlink-web-client
  namespace: media
spec:
  selector:
    app: shlink-web-client
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
