cluster/apps/media/shlink/web-client/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink-web-client
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web-check"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - urls.${SECRET_DOMAIN}
      secretName: "urls-tls"
  rules:
    - host: urls.${SECRET_DOMAIN}
